--- a/src/client/index.html
+++ b/src/client/index.html
@@ -42,9 +42,9 @@
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/bower_components/toastr/toastr.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
-
-    <script src="/src/client/app/app.module.js"></script>
-    <script src="/src/client/app/core/core.module.js"></script>
+w
+    <script src="../app/app.module.js"></script>
+    <script src="app/core/core.module.js"></script>
     <script src="/src/client/app/customers/customers.module.js"></script>
     <script src="/src/client/app/layout/layout.module.js"></script>
     <script src="/src/client/app/dashboard/dashboard.module.js"></script>
